--- a/Results2/report.html
+++ b/Results2/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,0,0,2,[],[1,0,304155],[[3,4,5,0,[],[1,613,302760],[],[[6,0,7,[8],[1,987,25415],[]],[9,0,10,[11],[1,26403,98275],[]],[12,0,13,[14],[1,124680,91886],[]],[15,0,16,[17],[1,216568,86802],[]]],[],[4,4,0,0]],[18,19,20,0,[],[1,600,4831],[],[[21,0,0,[],[1,621,4810],[]]],[],[1,1,0,0]],[22,23,24,0,[],[1,605,111054],[],[[6,0,0,[],[1,968,110689],[]]],[],[1,1,0,0]]],[],[],[6,6,0,0]];
+window.output["suite"] = [1,0,0,2,[],[1,0,7447],[[3,4,5,0,[],[1,810,3486],[],[[6,0,0,[],[1,828,3467],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Suites","*<p><a href=\"https://pabot.org/?ref=log\">Pabot\x3c/a> result from 3 executions.\x3c/p>","*TestCase","*C:\\Users\\AnkitKumar\\PycharmProjects\\ProjectDemo\\TestCases\\TestCase.robot","*../TestCases/TestCase.robot","*Login In the Website","*<p>This Test case do the login into the website.\x3c/p>","*Login","*Adding Customer in the Website","*<p>This Test case add the new customer and verify that added or not.\x3c/p>","*Adding Customer","*Deleting Customer from the website","*<p>This Test case delete the new customer and verify that deleted or not.\x3c/p>","*Deleting Customer","*Adding Customers roles","*<p>This Test will add customers role and verify that added or not.\x3c/p>","*Adding Customer Role","*Text","*C:\\Users\\AnkitKumar\\PycharmProjects\\ProjectDemo\\TestCases\\text.robot","*../TestCases/text.robot","*For_Loop","*LoginTest","*C:\\Users\\AnkitKumar\\PycharmProjects\\ProjectDemo\\TestCases\\LoginTest.robot","*../TestCases/LoginTest.robot"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Suites","*<p><a href=\"https://pabot.org/?ref=log\">Pabot\x3c/a> result from 3 executions.\x3c/p>","*Text","*C:\\Users\\AnkitKumar\\PycharmProjects\\ProjectDemo\\TestCases\\text.robot","*../TestCases/text.robot","*For_Loop"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:06:58","fail":0,"label":"All Tests","pass":6,"skip":0}],[{"elapsed":"00:01:38","fail":0,"label":"Adding Customer","pass":1,"skip":0},{"elapsed":"00:01:27","fail":0,"label":"Adding Customer Role","pass":1,"skip":0},{"elapsed":"00:01:32","fail":0,"label":"Deleting Customer","pass":1,"skip":0},{"elapsed":"00:00:25","fail":0,"label":"Login","pass":1,"skip":0}],[{"elapsed":"00:05:04","fail":0,"id":"s1","label":"Suites","name":"Suites","pass":6,"skip":0},{"elapsed":"00:05:03","fail":0,"id":"s1-s1","label":"Suites.TestCase","name":"TestCase","pass":4,"skip":0},{"elapsed":"00:00:05","fail":0,"id":"s1-s2","label":"Suites.Text","name":"Text","pass":1,"skip":0},{"elapsed":"00:01:51","fail":0,"id":"s1-s3","label":"Suites.LoginTest","name":"LoginTest","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Suites","name":"Suites","pass":1,"skip":0},{"elapsed":"00:00:03","fail":0,"id":"s1-s1","label":"Suites.Text","name":"Text","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1665568427694;
+window.output["baseMillis"] = 1667230022872;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 304437;
+window.output["generated"] = 7717;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
