--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,85791],[],[[4,0,0,[],[1,285,85501],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,89146],[],[[4,0,0,[],[1,305,88837],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*LoginTest","*C:\\Users\\AnkitKumar\\PycharmProjects\\ProjectDemo\\TestCases\\LoginTest.robot","*TestCases/LoginTest.robot","*Login In the Website"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Areachart","*C:\\Users\\AnkitKumar\\PycharmProjects\\ProjectDemo\\Testcases\\graphs\\areachart.robot","*Testcases/graphs/areachart.robot","*Area chart with hover effect"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:26","fail":0,"id":"s1","label":"LoginTest","name":"LoginTest","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:29","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:29","fail":0,"id":"s1","label":"Areachart","name":"Areachart","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1666270440124;
+window.output["baseMillis"] = 1666968736124;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 85842;
+window.output["generated"] = 89298;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
